<resources>
    <string name="app_name">SosarLink</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ftp_username_prompt">Please enter FTP username</string>
    <string name="none_hint">(none)</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ipv4">IP Address (IPv4)</string>
    <string name="ip_hint">IP</string>
    <string name="captures">Captures</string>
    <string name="network_settings">Network Settings</string>
    <string name="update_settings">Update Settings</string>
    <string name="ftp_login">FTP Login Credentials</string>
    <string name="submit">Submit</string>
    <string name="delete_all">Delete All</string>
    <string name="polling_settings">Change Polling Settings</string>
    <string name="cancel">Cancel</string>
    <string name="ftp_password_prompt">Please enter FTP password</string>
    <string name="ip_alarmdialog">Enter an IP or choose default gateway IP</string>
    <string name="manualip_hint">Manual IP</string>
    <string name="interval">Polling Interval (minutes)</string>
    <string name="interval_hint">Interval</string>
    <string name="enable_hint">Enable Polling</string>
    <string name="refresh">Refresh</string>
    <string name="save_settings">Save settings</string>
    <string name="set_ip_to_default">Set IP to Default Gateway address</string>
    <string name="gateway">Default gateway address</string>
</resources>
