<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:gravity="center"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/ftp_username_prompt" />

    <EditText
        android:inputType="text"
        android:id="@+id/ftp_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:paddingBottom="15dp" />
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/ftp_password_prompt"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/ftp_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:paddingBottom="15dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/submit"
            android:id="@+id/ftpCredSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/ftpCredCancel"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>