<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:gravity="center"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/ip_alarmdialog"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="wrap_content"
        android:id="@+id/ipEditText"
        android:hint="@string/manualip_hint"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/submitIpButton"
            android:text="@string/submit"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/defaultGatewayButton"
            android:layout_width="wrap_content"
            android:text="@string/gateway"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>