<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/enable_hint" />

        <Switch
            android:id="@+id/pollingEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:text="@string/interval" />

        <EditText
            android:inputType="number"
            android:id="@+id/pollingInt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/interval_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/savePollingSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_settings" />

        <Button
            android:id="@+id/cancelPollingSettings"
            android:layout_width="wrap_content"
            android:text="@string/cancel"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>